Add `diffEnv` helper and enhance dry-run with selective env display
- Introduced `diffEnv` function to identify changes in environment variables
- Updated dry-run logic to support selective env display modes (`diff`, `all`, `none`)
- Improved example.yml with additional comments and examples
- Adjusted `runBuild` to utilize `diffEnv` and handle base environment

--- a/example/example.yml
+++ b/example/example.yml
@@ -38,6 +38,13 @@ build:
   ###########################################################################
 
   # Extra linker flags passed verbatim
+  # Can be included as a list of strings or a single string
+  # ldflags: ["-s -w"]
+  # ldflags: ["-s", "-w"]
+  # or as a sequence of strings:
+  # ldflags:
+    #   - "-s"
+    #   - "-w"
   ldflags: ["-s -w"]
 
   # Map converted to -X 'key=value' linker flags
@@ -47,7 +54,7 @@ build:
     main.buildDate: "${BUILD_DATE:-$(date +%Y-%m-%d)}"
 
   # Standard Go build flags
-  tags:     ["prod"]
+  tags:     ["prod"]        # List of build tags, e.g. ["prod", "release"]
   gcflags:  ""              # -gcflags
   asmflags: ""              # -asmflags
   mod:      "mod"           # -mod - Possible values: "mod", "vendor", "readonly", "readonly+vendor", default is "mod"
